5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1865_1540.log
== TEST (2019-07-04 10:20:34) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factotorial(2*n)
	n+=1
print(round(cos,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cos = cos +(x**(1+n))/factotorial(2*n)
NameError: name 'factotorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:20:57) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factotorial(2*n)
	n+=1
print(round(cos,6))
-- EXECUTION TIME:
0.582276
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1865/1540/main.py", line 10, in <module>
    cos = cos +(x**(1+n))/factotorial(2*n)
NameError: name 'factotorial' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:03) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factotorial(2*n)
	n+=1
print(round(cos,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    cos = cos +(x**(1+n))/factotorial(2*n)
NameError: name 'factotorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:34) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
1.472692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:22:44) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- EXECUTION TIME:
0.844067
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
1.472692
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-13.591685
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
1.490368
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:25:34) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
1.472692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:26:02) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
1.472692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:26:40) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos -(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
-0.994709
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:27:14) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos -(x**(1+n))/factorial(2*n)
	else:
		cos = cos +(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
1.472692
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:29:43) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos +(x**(1+n))/factorial(2*n)
	else:
		cos = cos -(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
0.527308
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:30:00) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while n<k-1:
	if n%2 !=0:
		cos = cos +(x**(1+n))/factorial(2*n)
	else:
		cos = cos -(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
0.527308
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:30:31) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while (n<k-1):
	if (n%2 !=0):
		cos = cos +(x**(1+n))/factorial(2*n)
	else:
		cos = cos -(x**(1+n))/factorial(2*n)
	n+=1
print(round(cos,6))
-- EXECUTION TIME:
0.881396
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.527308
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
15.591685
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.509632
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:48) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while (n<k-1):
	if (n%2 !=0):
		cos = cos +(x**(1+n))/factorial(2+2*n)
	else:
		cos = cos -(x**(1+n))/factorial(2+2*n)
	n+=1
print(round(cos,6))
-- OUTPUT:
0.446567
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:33:03) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("serie: "))
n= 0
cos = 1
while (n<k-1):
	if (n%2 !=0):
		cos = cos +(x**(1+n))/factorial(2+2*n)
	else:
		cos = cos -(x**(1+n))/factorial(2+2*n)
	n+=1
print(round(cos,6))
-- EXECUTION TIME:
0.543192
-- TEST CASE 1:
---- input:
pi**2/8
3

---- correct output:
0.446567
---- user output:
0.446567
-- TEST CASE 2:
---- input:
pi**4/15
3
---- correct output:
-0.489834
---- user output:
-0.489834
-- TEST CASE 3:
---- input:
pi**1/2
6
---- correct output:
0.312176
---- user output:
0.312176
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
